--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=volonteers
+
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/volunteers
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
