added jwt,filter cors, EventsController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 mail.debug=true
+
+jwt.secret=984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
+jwt.lifetime=30m
