Добавил дохера всего для редактирования мероприятия и события, поменял структуру location-table, удалив поле адресс

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -35,3 +35,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-activity-users-table.yaml
   - include:
       file: db/changelog/changeset/create-request-table.yaml
+  - include:
+      file: db/changelog/changeset/modify-location-table.yaml
