Добавил заявки, добавил поля о себе юзеру, изменил id autoincrement заявке , поменял тип даты рождения на LocalDate timestamp в бд, чуть-чуть поменял сущность заявки, добавил контроллер для заполнения информации о себе, вроде все :)

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -37,3 +37,9 @@ databaseChangeLog:
       file: db/changelog/changeset/create-request-table.yaml
   - include:
       file: db/changelog/changeset/modify-location-table.yaml
+  - include:
+      file: db/changelog/changeset/modify-add-about-user.yaml
+  - include:
+      file: db/changelog/changeset/modify-type-dateOfBirth-user.yaml
+  - include:
+      file: db/changelog/changeset/modify-request-id.yaml
