--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.liquibase.enabled=true
+
+
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
