Добавил проверку сущ пользователя, проверку логина пароля

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
+spring.liquibase.
 
 
 
